refactor: unusual code

--- a/cloud-server/src/main/resources/config/client-api.yml
+++ b/cloud-server/src/main/resources/config/client-api.yml
@@ -1,5 +1,2 @@
-test:
-  hello: "default profile test.hello value"
-
 my:
-  value: "modified25 default profile my.value"
+  value: "value before changed"
